# Practice

./: .gitignore
Assembly/: README.md  add.asm  disassemble.asm  first.asm  jmp.asm  mov.asm
Assembly/1exit/: Makefile  app  exit  exit.s  main.s
CGI/: aaa.cgi  cgidemo.cgi  get.cpp  hello.cpp  hello_world.cgi  test.cgi
CPP/: class.cpp  class_constructor.cpp  class_inherit_protected.cpp  class_inherit_public.cpp  getline.cpp  point.cpp  polymorphism.cpp  std_list.cpp  thread.cpp  variable_limit.cpp
Cpp/: CMakeLists.txt  class_contructor_copy.cpp  class_inherit_private.cpp  class_static.cpp  const.cpp  define.cpp  define_new.cpp  exception.cpp  extern.cpp  extern_other.cpp  inherit.cpp  io.cpp  main.cpp  new.cpp  new2.cpp  new3.cpp  nullptr.cpp  random.cpp  std_vector.cpp  string.cpp  struct.cpp  time.cpp  variable.cpp
DesignPatterns/AbstractFactory/: CMakeLists.txt  abstractfactory.cpp  (+4 more)
MultiNode/: AAAreceiveLog.txt  CCCC_receiveLog.txt  CCC_receiveLog.txt  EEE_sendLog.txt  FFF_sendLog.txt  GGG_sendLog.txt  HHH_sendLog.txt  KKK_receiveLog.txt  LLL_receiveLog.txt  MMM_sendLog.txt  MultiNode.pro.user.2479e71  NNN_sendLog.txt  V01_sendLog.txt  XXX_sendLog.txt
Vue/: LICENSE
XNode/: CMakeLists.txt  client.cpp  client.h  config.json  main.cpp
XNode/Application/: CMakeLists.txt  mainwindow.ui
XNode/StandAloneNode/: CMakeLists.txt
abc/: index.html
linear/: CMakeLists.txt  linear.cpp  linear.h  main.cpp
recursion/: recursion.cpp  recursion.h
search/: CMakeLists.txt
tree/: CMakeLists.txt  btree.cpp  btree.h  main.cpp  test_btree.cpp
untitled/: main.cpp
(+239 files in other folders)
